--- a/package.json
+++ b/package.json
@@ -13,18 +13,25 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
-    "@chakra-ui/icons": "^1.0.15",
-    "@chakra-ui/react": "^1.6.6",
-    "@emotion/react": "^11.4.1",
-    "@emotion/styled": "^11.3.0",
+    "@chakra-ui/icons": "^1.1.1",
+    "@chakra-ui/react": "^1.7.2",
+    "@effector/reflect": "^7.0.1",
+    "@emotion/react": "^11.6.0",
+    "@emotion/styled": "^11.6.0",
+    "@types/react-datepicker": "^4.3.2",
     "@types/react-router-dom": "^5.1.8",
+    "@types/react-vis": "^1.11.10",
+    "axios": "^0.24.0",
     "effector": "^22.1.0",
     "effector-react": "^22.0.4",
     "framer-motion": "^4.1.17",
     "react": "^16.12.0",
+    "react-datepicker": "^4.3.0",
     "react-dom": "^16.12.0",
     "react-icons": "^4.2.0",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "react-vis": "^1.11.7",
+    "to-string-loader": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.7.7",
@@ -38,8 +45,11 @@
     "babel-plugin-transform-regenerator": "^6.26.0",
     "babel-polyfill": "^6.26.0",
     "cross-env": "^6.0.3",
+    "css-loader": "^6.5.1",
     "html-webpack-plugin": "^3.2.0",
+    "prettier": "2.5.1",
     "serve": "^11.3.0",
+    "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^2.3.2",
     "typescript": "^3.7.4",
     "webpack": "^4.41.5",
